--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Contacts and requisites" >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="../kronus/css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
+<link href="./css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
 
@@ -51,7 +51,7 @@
                 //-->
 </script>
 
-<link rel="icon" type="image/png" href="../kronus/images/kronus/favicon.png" />
+<link rel="icon" type="image/png" href="./images/kronus/favicon.png" />
 </head>
 <body>
 <div id="shadow"><div id="page">
@@ -60,7 +60,7 @@
                 <div>
             <div id="logo">
                 <a href="/">
-                    <img src="../kronus/images/kronus/logo/Logo-20-Small-Winter.png" alt="Kronus"/>
+                    <img src="./images/kronus/logo/Logo-20-Small-Winter.png" alt="Kronus"/>
                 </a>
             </div>
                         <div class="btn-group pull-right" style="z-index:10;">
@@ -580,11 +580,11 @@ IBAN: LV26HABA0551004805705</p>
     <!-- End Mailigen Signup Form -->
 </div>            <h3>We are social:</h3>
             <ul class="social-links">
-                <li><a href="https://www.facebook.com/pages/Kronus/870716592971061" target="_blank"><img src="../kronus/images/kronus/social/facebook.png "></a></li>
-                <li><a href="https://twitter.com/KronusEU" target="_blank"><img src="../kronus/images/kronus/social/twitter.png "></a></li>
-                <li><a href="https://www.youtube.com/channel/UCTnv1zA63jWwZJL-UyxG94A" target="_blank"><img src="../kronus/images/kronus/social/youtube.png "></a></li>
-                <li><a href="https://plus.google.com/110029637000413422461/about" target="_blank"><img src="../kronus/images/kronus/social/googleplus.png "></a></li>
-                <li><a href="https://www.pinterest.com/kronusEU/" target="_blank"><img src="../kronus/images/kronus/social/pinterest.png "></a></li>
+                <li><a href="https://www.facebook.com/pages/Kronus/870716592971061" target="_blank"><img src="./images/kronus/social/facebook.png "></a></li>
+                <li><a href="https://twitter.com/KronusEU" target="_blank"><img src="./images/kronus/social/twitter.png "></a></li>
+                <li><a href="https://www.youtube.com/channel/UCTnv1zA63jWwZJL-UyxG94A" target="_blank"><img src="./images/kronus/social/youtube.png "></a></li>
+                <li><a href="https://plus.google.com/110029637000413422461/about" target="_blank"><img src="./images/kronus/social/googleplus.png "></a></li>
+                <li><a href="https://www.pinterest.com/kronusEU/" target="_blank"><img src="./images/kronus/social/pinterest.png "></a></li>
             </ul>
                 </div>
     </div></div></div>
@@ -594,7 +594,7 @@ IBAN: LV26HABA0551004805705</p>
         All rights reserved.</div>
         <div class="right relative">
             <div id="lv012ht">LV-012<br>HT</div>
-            <img src="../kronus/images/kronus/footer-pallet.png" width="100" height="47" alt="pallet"/>
+            <img src="./images/kronus/footer-pallet.png" width="100" height="47" alt="pallet"/>
         </div>
         <div class="links">
             <a href="/en/company/about" class=" ">Company</a>               &nbsp;|&nbsp;
