--- a/pallets_cp.html
+++ b/pallets_cp.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="All types of CP pallets manufactured by KRONUS are made with highest quality. Heat treatment of pallets corresponds to  ISPM-15 (HT, IPPC, FAO) measures." >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="../kronus/css/frontend.css?1426835872" media="screen" rel="stylesheet" type="text/css" >
+<link href="./css/frontend.css?1426835872" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
 
@@ -288,11 +288,11 @@
     <!-- End Mailigen Signup Form -->
 </div>            <h3>We are social:</h3>
             <ul class="social-links">
-                <li><a href="https://www.facebook.com/pages/Kronus/870716592971061" target="_blank"><img src="../kronus/images/kronus/social/facebook.png "></a></li>
-                <li><a href="https://twitter.com/KronusEU" target="_blank"><img src="../kronus/images/kronus/social/twitter.png "></a></li>
-                <li><a href="https://www.youtube.com/channel/UCTnv1zA63jWwZJL-UyxG94A" target="_blank"><img src="../kronus/images/kronus/social/youtube.png "></a></li>
-                <li><a href="https://plus.google.com/110029637000413422461/about" target="_blank"><img src="../kronus/images/kronus/social/googleplus.png "></a></li>
-                <li><a href="https://www.pinterest.com/kronusEU/" target="_blank"><img src="../kronus/images/kronus/social/pinterest.png "></a></li>
+                <li><a href="https://www.facebook.com/pages/Kronus/870716592971061" target="_blank"><img src="./images/kronus/social/facebook.png "></a></li>
+                <li><a href="https://twitter.com/KronusEU" target="_blank"><img src="./images/kronus/social/twitter.png "></a></li>
+                <li><a href="https://www.youtube.com/channel/UCTnv1zA63jWwZJL-UyxG94A" target="_blank"><img src="./images/kronus/social/youtube.png "></a></li>
+                <li><a href="https://plus.google.com/110029637000413422461/about" target="_blank"><img src="./images/kronus/social/googleplus.png "></a></li>
+                <li><a href="https://www.pinterest.com/kronusEU/" target="_blank"><img src="./images/kronus/social/pinterest.png "></a></li>
             </ul>
                 </div>
     </div></div></div>
