--- a/contacts.html
+++ b/contacts.html
@@ -74,6 +74,7 @@
                             <div class="menu-mobile js-menu-mobile">
                                 <a class="menu-button" href="#"><span></span></a>
                                 <p>MENU</p>
+                                <a class="menu-close js-menu-close" href="#"><span></span></a>
                             </div>
                             <li class="" data-id="16"><a href="/en/collars"><span>Pallet collars</span></a></li>
                             <li class="" data-id="17"><a href="/en/custom_pallets"><span>Pallets</span></a></li>
