--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <title>Best transportation and packaging solution - Pallet Collars</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="author" content="CRA" >
 <meta name="keywords" content="" >
 <meta name="description" content="Wooden packaging manufacturer, the producer of pallet collars, collapsible crates and industrial packaging – KRONUS experts ensure the best solutions!" >
@@ -16,7 +17,7 @@
 <link href="http://www.kronus.eu/assets/css/kronus/anim/slide4.css" media="screen" rel="stylesheet" type="text/css" >
 
 <script type="text/javascript" src="http://www.kronus.eu/assets/js/jquery-1.9.1.min.js"></script>
-
+<script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript">
     //<!--
     
@@ -81,13 +82,42 @@
                                 <p>MENU</p>
                                 <a class="menu-close js-menu-close" href="#"><span></span></a>
                             </div>
-                            <li class="" data-id="16"><a href="/en/collars"><span>Pallet collars</span></a></li>
-                            <li class="active" data-id="17"><a href="/en/custom_pallets"><span>Pallets</span></a></li>
-                            <li class="" data-id="18"><a href="/en/solutions/5"><span>Solutions</span></a></li>
-                            <li class="" data-id="19"><a href="/en/company/about"><span>Company</span></a></li>
+                            <li class="main-menu__item" data-id="16">
+                                <a class="main-menu__btn" href="/en/collars"><span>Pallet collars</span></a>
+                            </li>
+                            <li class="main-menu__item active" data-id="17">
+                                <a class="main-menu__btn" href="/en/custom_pallets"><span>Pallets</span></a>
+                                <ul class="sub-menu active" data-id="17">
+                                    <li class=""><a href="/en/custom_pallets"><span>Custom</span></a></li>
+                                    <li class=""><a href="/en/pallets/600x800"><span>600&times;800</span></a></li>
+                                    <li class=""><a href="/en/pallets/800x1200"><span>800 &times;1200</span></a></li>
+                                    <li class=""><a href="/en/pallets/1000x1200"><span>1000 &times;1200</span></a></li>
+                                    <li class=""><a href="/en/pallets/epal"><span>EPAL</span></a></li>
+                                    <li class="active"><a href="/en/pallets/cp"><span>CP</span></a></li>
+                                </ul>
+                            </li>
+                            <li class="main-menu__item" data-id="18">
+                                <a class="main-menu__btn" href="/en/solutions/5"><span>Solutions</span></a>
+                                <ul class="sub-menu hidden-menu" data-id="18">
+                                    <li class=""><a href="/en/solutions/5"><span>Delivery</span></a></li>
+                                    <li class=""><a href="/en/solutions/1"><span>Customs &amp; documents</span></a></li>
+                                    <li class=""><a href="/en/solutions/6"><span>Reusable packaging</span></a></li>
+                                    <li class=""><a href="/en/solutions/7"><span>Consulting</span></a></li>
+                                </ul>
+                            </li>
+                            <li class="main-menu__item" data-id="19">
+                                <a class="main-menu__btn" href="/en/company/about"><span>Company</span></a>
+                                <ul class="sub-menu hidden-menu" data-id="19">
+                                    <li class=""><a href="/en/company/about"><span>About</span></a></li>
+                                    <li class=""><a href="/en/company/4"><span>Values</span></a></li>
+                                    <li class=""><a href="/en/certificates"><span>Certificates</span></a></li>
+                                    <li class=""><a href="/en/blog"><span>Blog</span></a></li>
+                                    <li class=""><a href="/en/contacts"><span>Contacts and requisites</span></a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </div>
-                    <ul class="sub-menu hidden-menu" data-id="17">
+                    </div> 
+                    <ul class="sub-menu active" data-id="17">
                         <li class=""><a href="/en/custom_pallets"><span>Custom</span></a></li>
                         <li class=""><a href="/en/pallets/600x800"><span>600&times;800</span></a></li>
                         <li class=""><a href="/en/pallets/800x1200"><span>800 &times;1200</span></a></li>
