--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Know everything you need to know about the number one storage and transportation solution with these articles, infographics and videos." >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="./css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
+<link href="css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
 
