--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Contacts and requisites" >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="./css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
+<link href="css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
 <script type="text/javascript" src="http://www.kronus.eu/assets/js/jquery-1.9.1.min.js"></script>
