--- a/custom_pallets.html
+++ b/custom_pallets.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Order custom pallets from best manufacturer in Europe. Wood or non wood, Two-way or full deck pallet. Any customization like Board beveling and Furnishing" >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="./css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
+<link href="css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 <link href="http://www.kronus.eu/assets/css/kronus/anim/anim.css" media="screen" rel="stylesheet" type="text/css" >
 
