--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Wooden packaging manufacturer, the producer of pallet collars, collapsible crates and industrial packaging – KRONUS experts ensure the best solutions!" >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="./css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
+<link href="css/frontend.css?1425041214" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 <link href="http://www.kronus.eu/assets/css/flexslider.css" media="screen" rel="stylesheet" type="text/css" >
 <link href="http://www.kronus.eu/assets/css/kronus/anim/slide2.css" media="screen" rel="stylesheet" type="text/css" >
