--- a/pallets_cp.html
+++ b/pallets_cp.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="" >
     <meta name="description" content="All types of CP pallets manufactured by KRONUS are made with highest quality. Heat treatment of pallets corresponds to  ISPM-15 (HT, IPPC, FAO) measures." >
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-    <link href="./css/frontend.css?1426835872" media="screen" rel="stylesheet" type="text/css" >
+    <link href="css/frontend.css?1426835872" media="screen" rel="stylesheet" type="text/css" >
     <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
     <script type="text/javascript" src="http://www.kronus.eu/assets/js/jquery-1.9.1.min.js"></script>
