--- a/solutions.html
+++ b/solutions.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="" >
 <meta name="description" content="Worldwide Delivery / Worldwide delivery solutions for pallet collars and EPAL pallets / Logistics and supply chain management / Industrial storage shelving" >
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,cyrillic" media="screen" rel="stylesheet" type="text/css" >
-<link href="./css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
+<link href="css/frontend.css?1427378170" media="screen" rel="stylesheet" type="text/css" >
 <!--[if lte IE 8]> <link href="/assets/css/kronus/ie8.css" media="screen, projection" rel="stylesheet" type="text/css" ><![endif]-->
 
 
