--- a/articles.html
+++ b/articles.html
@@ -82,7 +82,7 @@
                                 <a class="menu-close js-menu-close" href="#"><span></span></a>
                             </div>
                             <li class="main-menu__item" data-id="16">
-                                <a class="main-menu__btn" href="/en/collars"><span>Pallet collars</span></a>
+                                <a href="/en/collars"><span>Pallet collars</span></a>
                             </li>
                             <li class="main-menu__item active" data-id="17">
                                 <a class="main-menu__btn" href="/en/custom_pallets"><span>Pallets</span></a>
