--- a/certificates.html
+++ b/certificates.html
@@ -203,8 +203,8 @@
         </div>
     </div>
     <div id="bottom-out">
-        <div id="bottom" class="inlay">
-            <div id="bottom-wrap1">
+        <div id="bottom">
+            <div id="bottom-wrap1 inlay">
                 <div id="bottom-wrap2">
                     <div class="col col1">
                         <h3>Contact person</h3>
