--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                             <li class="main-menu__item" data-id="16">
                                 <a class="main-menu__btn" href="/en/collars"><span>Pallet collars</span></a>
                             </li>
-                            <li class="main-menu__item active" data-id="17">
+                            <li class="main-menu__item hidden-menu" data-id="17">
                                 <a class="main-menu__btn" href="/en/custom_pallets"><span>Pallets</span></a>
-                                <ul class="sub-menu active" data-id="17">
+                                <ul class="mob-sub-menu active" data-id="17">
                                     <li class=""><a href="/en/custom_pallets"><span>Custom</span></a></li>
                                     <li class=""><a href="/en/pallets/600x800"><span>600&times;800</span></a></li>
                                     <li class=""><a href="/en/pallets/800x1200"><span>800 &times;1200</span></a></li>
@@ -98,7 +98,7 @@
                             </li>
                             <li class="main-menu__item" data-id="18">
                                 <a class="main-menu__btn" href="/en/solutions/5"><span>Solutions</span></a>
-                                <ul class="sub-menu hidden-menu" data-id="18">
+                                <ul class="mob-sub-menu hidden-menu" data-id="18">
                                     <li class=""><a href="/en/solutions/5"><span>Delivery</span></a></li>
                                     <li class=""><a href="/en/solutions/1"><span>Customs &amp; documents</span></a></li>
                                     <li class=""><a href="/en/solutions/6"><span>Reusable packaging</span></a></li>
@@ -107,7 +107,7 @@
                             </li>
                             <li class="main-menu__item" data-id="19">
                                 <a class="main-menu__btn" href="/en/company/about"><span>Company</span></a>
-                                <ul class="sub-menu hidden-menu" data-id="19">
+                                <ul class="mob-sub-menu hidden-menu" data-id="19">
                                     <li class=""><a href="/en/company/about"><span>About</span></a></li>
                                     <li class=""><a href="/en/company/4"><span>Values</span></a></li>
                                     <li class=""><a href="/en/certificates"><span>Certificates</span></a></li>
