--- a/collars.html
+++ b/collars.html
@@ -378,10 +378,20 @@
                                 <li class="btn-plastic"><a href=""><span><span class="title">Plastic</span></span></a></li>
                             </ul>
                             <img class="anim10-img" src="http://www.kronus.eu/images/kronus/anim/10/collar-materials-desk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img tablet" src="images/kronus/anim/10/tab-desk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img mobile" src="images/kronus/anim/10/m-desk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
                             <img class="anim10-img" src="http://www.kronus.eu/images/kronus/anim/10/collar-materials-doubledesk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img tablet" src="images/kronus/anim/10/tab-doubledesk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img mobile" src="images/kronus/anim/10/m-doubledesk.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
                             <img class="anim10-img" src="http://www.kronus.eu/images/kronus/anim/10/collar-materials-osb.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img tablet" src="images/kronus/anim/10/tab-osb.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img mobile" src="images/kronus/anim/10/m-osb.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
                             <img class="anim10-img" src="http://www.kronus.eu/images/kronus/anim/10/collar-materials-plywood.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img tablet" src="images/kronus/anim/10/tab-plywood.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img mobile" src="images/kronus/anim/10/m-plywood.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
                             <img class="anim10-img" src="http://www.kronus.eu/images/kronus/anim/10/collar-materials-plastic.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img tablet" src="images/kronus/anim/10/tab-plastic.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
+                            <img class="anim10-img mobile" src="images/kronus/anim/10/m-plastic.png" alt="Collar materials / Wooden packaging / Pallet collars and systems for storage solutions"/>
                             <div class="image-overlay"></div>
                         </div>
                         <div id="report"></div>
