--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="slide-mobile"><img src="./images/kronus/slide1.png" alt=""></div>
+                                <div class="slide-tablet"><img src="./images/kronus/Pack.jpg" alt=""></div>
+                                <div class="slide-mobile"><img src="./images/kronus/Pack_1.jpg" alt=""></div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -326,7 +327,8 @@
                                     <p id="p87">Save up to 87%</p>
                                     <p id="not-in-use">of storage size when not in use*</p>
                                 </div>
-                                <div class="slide-mobile"><img src="./images/kronus/slide2.png" alt=""></div>
+                                <div class="slide-tablet"><img src="./images/kronus/Comparison.jpg" alt=""></div>
+                                <div class="slide-mobile"><img src="./images/kronus/Comparison_1.jpg" alt=""></div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -456,7 +458,8 @@
                                     <div class="full pain-circle-5"></div>
                                     <div class="full pain-circle-6"></div>
                                 </div>
-                                <div class="slide-mobile"><img src="./images/kronus/slide3.png" alt=""></div>
+                                <div class="slide-tablet"><img src="./images/kronus/Pain.jpg" alt=""></div>
+                                <div class="slide-mobile"><img src="./images/kronus/Pain_1.jpg" alt=""></div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -620,7 +623,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="slide-mobile"><img src="./images/kronus/slide4.png" alt=""></div>
+                                <div class="slide-tablet"><img src="./images/kronus/Elephant.jpg" alt=""></div>
+                                <div class="slide-mobile"><img src="./images/kronus/Elephant_1.jpg" alt=""></div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
