--- a/index.html
+++ b/index.html
@@ -187,8 +187,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="slide-tablet"><img src="./images/kronus/Pack.jpg" alt=""></div>
-                                <div class="slide-mobile"><img src="./images/kronus/Pack_1.jpg" alt=""></div>
+                                <div class="slide-tablet">
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    <img src="./images/kronus/Pack.jpg" alt="">
+                                </div>
+                                <div class="slide-mobile">
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    <img src="./images/kronus/Pack_1.jpg" alt="">
+                                </div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -327,8 +335,16 @@
                                     <p id="p87">Save up to 87%</p>
                                     <p id="not-in-use">of storage size when not in use*</p>
                                 </div>
-                                <div class="slide-tablet"><img src="./images/kronus/Comparison.jpg" alt=""></div>
-                                <div class="slide-mobile"><img src="./images/kronus/Comparison_1.jpg" alt=""></div>
+                                <div class="slide-tablet">
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Collapsible packaging for Warehouse Optimization</div>
+                                    <img src="./images/kronus/Comparison.jpg" alt="">
+                                </div>
+                                <div class="slide-mobile">
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Collapsible packaging for Warehouse Optimization</div>
+                                    <img src="./images/kronus/Comparison_1.jpg" alt="">
+                                </div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -458,8 +474,15 @@
                                     <div class="full pain-circle-5"></div>
                                     <div class="full pain-circle-6"></div>
                                 </div>
-                                <div class="slide-tablet"><img src="./images/kronus/Pain.jpg" alt=""></div>
-                                <div class="slide-mobile"><img src="./images/kronus/Pain_1.jpg" alt=""></div>
+                                <div class="slide-tablet">
+                                    <div class="full title-text-3">Ensuring the best <br/>working conditions</div>
+                                    <img src="./images/kronus/Pain.jpg" alt="">
+                                </div>
+                                <div class="slide-mobile">
+                                    <div class="full inlay"></div>
+                                    <div class="full title-text-3">Ensuring the best <br/>working conditions</div>
+                                    <img src="./images/kronus/Pain_1.jpg" alt="">
+                                </div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
@@ -623,8 +646,17 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="slide-tablet"><img src="./images/kronus/Elephant.jpg" alt=""></div>
-                                <div class="slide-mobile"><img src="./images/kronus/Elephant_1.jpg" alt=""></div>
+                                <div class="slide-tablet">
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Best solution for <br>industrial packaging:</div>
+                                    <img src="./images/kronus/Elephant.jpg" alt="">
+                                </div>
+                                <div class="slide-mobile">
+                                    <div class="full inlay"></div>
+                                    <div class="full title-bg" id="title-bg"></div>
+                                    <div class="full title-text" id="title-text">Best solution for <br>industrial packaging:</div>
+                                    <img src="./images/kronus/Elephant_1.jpg" alt="">
+                                </div>
                             </li>
                             <script type="text/javascript">
                                 $(function() {
