--- a/index.html
+++ b/index.html
@@ -188,13 +188,17 @@
                                     </div>
                                 </div>
                                 <div class="slide-tablet">
-                                    <div class="full title-bg" id="title-bg"></div>
-                                    <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    <div id="blue-plate" style="margin-top:-30px" class="blue-plate animated-slide-item">
+                                        <div class="full title-bg" id="title-bg"></div>
+                                        <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    </div>
                                     <img src="./images/kronus/Pack.jpg" alt="">
                                 </div>
                                 <div class="slide-mobile">
-                                    <div class="full title-bg" id="title-bg"></div>
-                                    <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    <div id="blue-plate" style="margin-top:-30px" class="blue-plate animated-slide-item">
+                                        <div class="full title-bg" id="title-bg"></div>
+                                        <div class="full title-text" id="title-text">Pallet Collars are the best wooden packaging solution for:</div>
+                                    </div>
                                     <img src="./images/kronus/Pack_1.jpg" alt="">
                                 </div>
                             </li>
@@ -475,12 +479,17 @@
                                     <div class="full pain-circle-6"></div>
                                 </div>
                                 <div class="slide-tablet">
-                                    <div class="full title-text-3">Ensuring the best <br/>working conditions</div>
+                                    <div id="blue-plate" style="margin-top:-30px" class="blue-plate animated-slide-item">
+                                        <div class="title-bg" id="title-bg"></div>
+                                        <div class="title-text" id="title-text">Ensuring the best working conditions</div>
+                                    </div>
                                     <img src="./images/kronus/Pain.jpg" alt="">
                                 </div>
                                 <div class="slide-mobile">
-                                    <div class="full inlay"></div>
-                                    <div class="full title-text-3">Ensuring the best <br/>working conditions</div>
+                                    <div id="blue-plate" style="margin-top:-30px" class="blue-plate animated-slide-item">
+                                        <div class="title-bg" id="title-bg"></div>
+                                        <div class="title-text" id="title-text">Ensuring the best working conditions</div>
+                                    </div>
                                     <img src="./images/kronus/Pain_1.jpg" alt="">
                                 </div>
                             </li>
@@ -652,7 +661,6 @@
                                     <img src="./images/kronus/Elephant.jpg" alt="">
                                 </div>
                                 <div class="slide-mobile">
-                                    <div class="full inlay"></div>
                                     <div class="full title-bg" id="title-bg"></div>
                                     <div class="full title-text" id="title-text">Best solution for <br>industrial packaging:</div>
                                     <img src="./images/kronus/Elephant_1.jpg" alt="">
